<?xml version="1.0"?>
<package format="2">
  <name>flightgoggles_simple</name>
  <version>0.0.0</version>
  <description>The flightgoggles_simple package</description>

  <maintainer email="winterg@mit.edu">Winter Guerra</maintainer>
  <maintainer email="inhwan.wee@nearthlab.com">Inhwan Wee</maintainer>
  <license>MIT</license>
  
  <author email="winterg@mit.edu">Winter Guerra</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  
  <!-- Message types used -->
  <depend>std_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Libraries -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <!-- ROS OpenCV3 -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Other deps -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
